--- a/src/app/screen-tasks/screen-tasks.scss
+++ b/src/app/screen-tasks/screen-tasks.scss
@@ -116,3 +116,9 @@ mat-nav-list {
   position: relative;
   top: 1px;
 }
+
+.task-actions {
+  display: flex;
+  align-items: center;
+  gap: 4px;
+}
