--- a/src/app/screen-tasks/screen-tasks.html
+++ b/src/app/screen-tasks/screen-tasks.html
@@ -32,6 +32,7 @@
           routerLinkActive
           #rla="routerLinkActive"
           queryParamsHandling="merge"
+          [ngClass]="{ 'running-task': task | map: isTaskRunning }"
         >
           <mat-icon
             [svgIcon]="task | taskStateIcon"
